Until Exercise 17 complete

--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 
+<h1>My Favorite Bands</h1>
+<ul id="band-list"></ul>
+
 <body>
-    <h1>Pulga</h1>
+
     <script src="/Main.js"></script>
 </body>
 
